log/build_2026-01-22_09-35-51/assignment2_rt_py/stderr.log
  File "/home/ubuntu/ros_workspace/install/assignment2_rt_py/lib/python3.12/site-packages/assignment2_rt_py/robot_controller.py", line 203
    while not self.valid_input 
                               ^
SyntaxError: expected ':'

